--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -95,6 +95,23 @@ section a:hover {
   }
 }
 
+.post-body {
+  p {
+    max-width: 560px;
+    margin-bottom: 30px;
+    line-height: 1.5;
+  }
+
+  img {
+    max-width: 780px;
+  }
+
+  h3 {
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+}
+
 .circle {
   position: fixed;
   bottom: -250px;
@@ -103,4 +120,5 @@ section a:hover {
   height: 500px;
   background-color: $highlight;
   border-radius: 50%;
+  z-index: -1;
 }
