--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <a href="/"><img src="/assets/img/logo.svg" alt="A Night in Japan" /></a>
 
   <nav>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
+    <a href="/" {% if page.url == "/" %} class="selected" {% endif %}>Home</a>
+    <a href="/about" {% if page.url == "/about/" %} class="selected" {% endif %}>About</a>
   </nav>
 </header>
